--- a/package.json
+++ b/package.json
@@ -13,30 +13,43 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "app-module-path": "^2.2.0",
     "body-parser": "^1.18.3",
-    "chalk": "^2.4.1",
-    "dotenv": "^6.1.0",
+    "chalk": "^2.4.2",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
-    "mongoose": "^5.3.12",
+    "i": "^0.3.6",
+    "mongoose": "^5.4.10",
+    "npm": "^6.7.0",
     "path": "^0.12.7",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react": "^16.8.1",
+    "react-burger-menu": "^2.6.4",
+    "react-dom": "^16.8.1",
+    "react-font-awesome": "^1.0.3",
+    "react-fontawesome": "^1.6.1",
+    "react-native-vector-icons": "^6.2.0",
+    "react-router-dom": "^4.3.1",
+    "url-loader": "^1.1.2"
   }
 }
