--- a/package.json
+++ b/package.json
@@ -7,50 +7,47 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --config config/webpack.dev.config.js",
     "build": "webpack --mode production --config config/webpack.prod.config.js",
-    "start": "npm run build && node server.js"
+    "start": "npm run build && node server.js",
+    "s-test1": "mocha tests/testChrome1.js",
+    "s-test2": "mocha tests/testFirefox1.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
+    "jest": "^24.1.0",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.14",
-    "@fortawesome/free-solid-svg-icons": "^5.7.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@trendmicro/react-sidenav": "^0.4.5",
     "app-module-path": "^2.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "chalk": "^2.4.2",
-    "dotenv": "^6.2.0",
+    "chalk": "^2.4.1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "file-loader": "^3.0.1",
-    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
-    "i": "^0.3.6",
-    "mongoose": "^5.4.10",
-    "npm": "^6.7.0",
+    "mongoose": "^5.3.12",
     "path": "^0.12.7",
-    "react": "^16.8.1",
-    "react-burger-menu": "^2.6.4",
-    "react-dom": "^16.8.1",
-    "react-font-awesome": "^1.0.3",
-    "react-fontawesome": "^1.6.1",
-    "react-native-vector-icons": "^6.2.0",
-    "react-router-dom": "^4.3.1",
-    "url-loader": "^1.1.2"
-  }
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1"
+  },
+  "jest": {
+  "snapshotSerializers": ["enzyme-to-json/serializer"]
+}
 }
