--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "app-module-path": "^2.2.0",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
