--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --config config/webpack.dev.config.js",
+    "dev": "NODE_ENV=development webpack-dev-server --mode development --config config/webpack.dev.config.js",
     "build": "webpack --mode production --config config/webpack.prod.config.js",
     "start": "npm run build && node server.js",
     "s-test1": "mocha tests/testChrome1.js",
@@ -15,8 +15,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
@@ -49,6 +49,7 @@
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "i": "^0.3.6",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.10",
