--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.10",
+    "nodemailer": "^5.1.1",
     "npm": "^6.7.0",
     "path": "^0.12.7",
+    "rand-token": "^0.4.0",
     "react": "^16.8.1",
     "react-burger-menu": "^2.6.4",
     "react-dom": "^16.8.1",
