--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rand-token": "^0.4.0",
     "react": "^16.8.1",
     "react-burger-menu": "^2.6.4",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-font-awesome": "^1.0.3",
     "react-fontawesome": "^1.6.1",
