--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-native-vector-icons": "^6.2.0",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.9.0",
-    "react-toast-notifications": "^1.3.1",
+    "react-toastify": "^4.5.2",
     "url-loader": "^1.1.2"
   },
   "jest": {
