--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -59,6 +60,7 @@
     "path": "^0.12.7",
     "rand-token": "^0.4.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-burger-menu": "^2.6.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
