--- a/package.json
+++ b/package.json
@@ -44,17 +44,19 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "cacache": "^11.3.2",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "globals": "^11.11.0",
     "i": "^0.3.6",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.10",
+    "mongoose": "^5.4.14",
     "nodemailer": "^5.1.1",
     "npm": "^6.7.0",
     "path": "^0.12.7",
