--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
+    "brotli-webpack-plugin": "^1.1.0",
     "css-loader": "^1.0.1",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "enzyme-to-json": "^3.3.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
+    "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
@@ -42,18 +42,16 @@
     "bootstrap": "^4.3.1",
     "cacache": "^11.3.2",
     "chalk": "^2.4.1",
+    "compression-webpack-plugin": "^2.0.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "file-loader": "^3.0.1",
     "fs": "0.0.1-security",
     "globals": "^11.11.0",
     "i": "^0.3.6",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
     "mongoose": "^5.4.14",
     "nodemailer": "^5.1.1",
-    "npm": "^6.7.0",
     "path": "^0.12.7",
     "rand-token": "^0.4.0",
     "react": "^16.8.1",
@@ -63,12 +61,6 @@
     "react-native-vector-icons": "^6.2.0",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.9.0",
-    "react-toastify": "^4.5.2",
-    "url-loader": "^1.1.2"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
+    "react-toastify": "^4.5.2"
   }
 }
