--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-vector-icons": "^6.2.0",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.9.0",
+    "react-tabs": "^3.0.0",
     "react-toastify": "^4.5.2"
   }
 }
