--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-loader": "^8.0.4",
     "brotli-webpack-plugin": "^1.1.0",
     "css-loader": "^1.0.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -62,6 +64,8 @@
     "react-router-dom": "^4.3.1",
     "react-table": "^6.9.0",
     "react-tabs": "^3.0.0",
-    "react-toastify": "^4.5.2"
+    "react-toastify": "^4.5.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0"
   }
 }
