--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^4.3.1",
     "cacache": "^11.3.2",
     "chalk": "^2.4.1",
+    "chart.js": "^2.8.0",
     "compression-webpack-plugin": "^2.0.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -58,6 +59,7 @@
     "rand-token": "^0.4.0",
     "react": "^16.8.1",
     "react-burger-menu": "^2.6.4",
+    "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-native-vector-icons": "^6.2.0",
