--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "NODE_ENV=development && webpack-dev-server --mode development --config config/webpack.dev.config.js",
     "build": "webpack --mode production --config config/webpack.prod.config.js",
     "start": "npm run build && node server.js",
-    "s-test1": "mocha tests/testChrome1.js",
-    "s-test2": "mocha tests/testFirefox1.js"
+    "clean": "rm -r ./dist/*"
   },
   "keywords": [],
   "author": "",
