--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.3.1",
     "cacache": "^11.3.2",
     "chalk": "^2.4.1",
     "chart.js": "^2.8.0",
@@ -68,5 +67,6 @@
     "react-toastify": "^4.5.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
-  }
+  },
+  "optionalDependencies": {}
 }
